<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.sicredi.presentation.events.details.EventDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/product_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:transitionName="productImage"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/eventImage"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:contentDescription="@string/contentDescription"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_broken_image_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <TextView
                        android:id="@+id/textViewToolbarEventTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/raleway_semibold"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                        android:textColor="@android:color/white" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="@android:color/white"
                android:padding="8dp"
                app:cardCornerRadius="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/eventTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/shareEvent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Doação de Roupas" />

                    <ImageView
                        android:id="@+id/shareEvent"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/contentDescription"
                        android:src="@drawable/ic_baseline_share_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/eventTitle" />

                    <TextView
                        android:id="@+id/eventDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/raleway_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eventTitle"
                        tools:text="05/11/2020" />

                    <View
                        android:id="@+id/viewDescription"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="16dp"
                        android:background="@color/lightGray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eventDate" />

                    <TextView
                        android:id="@+id/eventDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/raleway_light"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/viewDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:id="@+id/eventBottomSheetDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="55dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <LinearLayout
                android:id="@+id/bottomSheetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_place_white"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/raleway_semibold"
                    android:padding="16dp"
                    android:text="@string/action_check_in"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/expandTotalArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_arrow_drop_up_white_24dp"
                    tools:ignore="VectorDrawableCompat" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="@string/hint_checkin_name"
                    android:ems="10"
                    android:hint="@string/hint_checkin_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:text="@={viewModel.name}"
                    android:textSize="18sp"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="@string/hint_checkin_email"
                    android:ems="10"
                    android:hint="@string/hint_checkin_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:text="@={viewModel.email}"
                    android:textSize="18sp"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{() -> viewModel.validateDataEntry()}"
                android:padding="8dp"
                android:text="@string/button_check_in" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>